fixato problema con firefox

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
 .slider-carosello {
     object-fit: cover;
     min-width: 0;
-	height: 100%;
+	height: 80px;
     display: block;
     filter: brightness(.4);
 }
